# rofify

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
controller/: Cargo.toml
controller/src/: lib.rs
notify/: Cargo.toml
notify/src/: lib.rs
rofify/: Cargo.toml
rofify/src/: auth.rs  config.rs  lib.rs
rofify/src/menu/: device.rs  mod.rs  mode.rs  playback.rs  search.rs
src/: auth.rs  config.rs  lib.rs  main.rs  menu.rs
src/menu/: album.rs  device.rs  mod.rs  mode.rs  playback.rs  search.rs  track.rs
visualizer/: Cargo.toml
visualizer/src/: lib.rs  spectrum.rs
