[package]
name = "rofify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
rspotify = { version = "0.12.0", features = ["env-file", "cli"] }
strum = "0.25.0"
tokio = { version = "1.32.0", features = ["full"] }
