[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
controller = { path = "../controller" }
notify-rust = "4.9.0"
rofify = { path = "../rofify" }
tokio = { version = "1.32.0", features = ["full"] }
