[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.7"
notify = { path = "../notify" }
reqwest = "0.11.22"
rofify = { path = "../rofify" }
rspotify = { version = "0.12.0" }
thiserror = "1.0.49"
