[package]
name = "rofify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.1"
async-trait = "0.1.73"
copypasta = "0.8.2"
futures = "0.3.28"
notify-rust = "4.9.0"
rocket = "=0.5.0-rc.3"
rspotify = { version = "0.12.0" }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
strum = "0.25.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
webbrowser = "0.8.11"
