[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
eframe = "0.23.0"
rofify = { path = "../rofify" }
rspotify = "0.12.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
